--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,22 @@ node_modules
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Production
+/build
+
+# Generated files
+.docusaurus
+.cache-loader
+.eslintcache
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
