--- a/package.json
+++ b/package.json
@@ -1,39 +1,14 @@
 {
-  "name": "eslint-config-jc",
-  "version": "2.0.1",
-  "description": "Josh-Cena's personal coding style",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jc-verse/eslint-config-jc.git"
-  },
-  "keywords": [
-    "eslint",
-    "eslint-config"
-  ],
-  "author": "Joshua Chen",
+  "name": "root",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jc-verse/eslint-config-jc/issues"
-  },
-  "homepage": "https://github.com/jc-verse/eslint-config-jc#readme",
+  "workspaces": [
+    "packages/*",
+    "website"
+  ],
   "scripts": {
     "format": "prettier -w .",
     "lint": "eslint \"**/*.{js,ts,jsx,tsx}\"",
     "prepare": "husky install"
-  },
-  "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
-    "eslint": "^8.2.0",
-    "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.27.0",
-    "eslint-plugin-react-hooks": "^4.3.0"
-  },
-  "dependencies": {
-    "eslint-config-prettier": "^8.3.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.10.2",
