chore: add publishConfig to every package

--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -10,6 +10,10 @@
   },
   "author": "Joshua Chen",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "bugs": {
     "url": "https://github.com/jc-verse/js-style-guide/issues"
   },
