feat: create-jc-project
commit d2ad7ce66f0b85c3d5b8c0e0273b1d8d3773d986
Author: Joshua Chen <sidachen2003@gmail.com>
Date:   Tue Apr 19 19:52:08 2022 +0800

    feat: initial work on create-jc-project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "root",
+  "private": true,
   "license": "MIT",
   "workspaces": [
     "packages/*",
@@ -8,7 +9,9 @@
   "scripts": {
     "format": "prettier -w .",
     "lint": "eslint \"**/*.{js,ts,jsx,tsx}\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build": "yarn workspaces foreach --no-private -t -v run build",
+    "publish": "yarn workspaces foreach --no-private npm publish"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.20.0",
