--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -12,7 +12,7 @@
     "prettier",
     "prettier-config"
   ],
-  "author": "Joshua Chen",
+  "author": "Joshua Chen <sidachen2003@gmail.com>",
   "license": "MIT",
   "publishConfig": {
     "access": "public",
