--- a/packages/create-jc-project/tsconfig.json
+++ b/packages/create-jc-project/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "extends": "tsconfig-jc",
   "compilerOptions": {
+    "module": "NodeNext",
     "outDir": "dist",
     "rootDir": "src",
     "target": "es2021",
-    "lib": ["ESNext", "DOM"],
+    "lib": ["ESNext"],
     "declaration": false,
     "declarationMap": false,
-    "jsx": "react",
     "importHelpers": true,
     "noEmitHelpers": true
   }
