--- a/website/package.json
+++ b/website/package.json
@@ -15,18 +15,18 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.21",
-    "@docusaurus/preset-classic": "2.0.0-beta.21",
+    "@docusaurus/core": "2.0.1",
+    "@docusaurus/preset-classic": "2.0.1",
     "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.1.1",
-    "docusaurus-preset-shiki-twoslash": "^1.1.37",
+    "clsx": "^1.2.1",
+    "docusaurus-preset-shiki-twoslash": "^1.1.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-beta.21",
+    "@docusaurus/module-type-aliases": "2.0.1",
     "@tsconfig/docusaurus": "^1.0.6",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.4"
   },
   "browserslist": {
     "production": [
