--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,8 +1,11 @@
 nodeLinker: node-modules
-npmPublishRegistry: https://registry.npmjs.org
+
+npmPublishRegistry: "https://registry.npmjs.org"
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
-yarnPath: .yarn/releases/yarn-3.2.0.cjs
+
+yarnPath: .yarn/releases/yarn-3.3.1.cjs
