--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,18 @@
 {
   "extends": ["jc"],
+  "parserOptions": {
+    "project": true
+  },
   "overrides": [
     {
       "files": ["**/rules/**.js"],
       "rules": {
         "sort-keys": "warn"
       }
+    },
+    {
+      "files": ["*.js"],
+      "extends": ["plugin:@typescript-eslint/disable-type-checked"]
     }
   ]
 }
