--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -25,6 +25,7 @@
   "exports": {
     ".": "./index.js",
     "./base": "./rules/base.js",
+    "./regex": "./rules/regex.js",
     "./import": "./rules/import.js",
     "./jsx": "./rules/jsx.js",
     "./react": "./rules/react.js",
@@ -42,7 +43,8 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-regexp": "^2.1.1"
   },
   "peerDependenciesMeta": {
     "eslint-plugin-header": {
