--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
     "publish": "yarn workspaces foreach --no-private npm publish"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "cspell": "^8.0.0",
-    "eslint": "^8.54.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "cspell": "^8.4.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-regexp": "^2.1.1",
+    "eslint-plugin-regexp": "^2.2.0",
     "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
-    "prettier": "^3.1.0",
-    "typescript": "^5.3.2"
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "typescript": "~5.3.3"
   },
   "packageManager": "yarn@4.0.2"
 }
