--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-jc",
-  "version": "5.1.0",
+  "version": "5.2.0",
   "description": "Josh-Cena's personal coding style",
   "type": "module",
   "repository": {
@@ -36,20 +36,23 @@
     "prepublishOnly": "yarn build"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-n": "^17.2.1",
+    "eslint-plugin-n": "^17.4.0",
     "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-regexp": "^2.5.0",
     "globals": "^15.0.0",
-    "typescript-eslint": "^7.7.0"
+    "typescript-eslint": "^7.8.0"
   },
   "devDependencies": {
     "@types/eslint-config-prettier": "^6.11.3"
+  },
+  "peerDependencies": {
+    "eslint": "^8.57.0"
   }
 }
