--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "lint": "eslint .",
     "spellcheck": "cspell \"**\" --no-progress",
     "prepare": "husky install",
-    "build": "yarn workspaces foreach --no-private -t -v run build",
+    "build": "yarn workspaces foreach -R --no-private -t -v run build",
     "publish": "yarn workspaces foreach --no-private npm publish"
   },
   "devDependencies": {
-    "cspell": "^8.7.0",
-    "eslint": "^8.57.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
-    "typescript": "~5.4.5"
+    "cspell": "^8.14.4",
+    "eslint": "^9.12.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "typescript": "~5.6.3"
   },
   "packageManager": "yarn@4.1.1"
 }
